# workday-lister

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  sandbox.py  setup.cfg
tests/test_example/: test_some_function.py
workday_lister/: calendar.py  google.py  lister.py  types.py
